fix emptyMsg font size and spacing

--- a/styles.css
+++ b/styles.css
@@ -63,8 +63,10 @@ img:hover {
     left: 50%;
     margin-top: -50px;
     margin-left: -115px;
-    width: 230px;
+    width: 300px;
     height: 100px; 
+    font-size: 2vw;
+    line-height: 2.75rem;
 }
 .pages-active {
     background-color: rgb(57, 170, 22) !important;
